HW06: mini refactoring and changed package name